--- a/flowmind/package.json
+++ b/flowmind/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
+    "inngest": "^3.40.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
