--- a/flowmind/package.json
+++ b/flowmind/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "email": "email dev",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
@@ -21,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^0.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "data-fns": "^1.1.0",
@@ -46,6 +48,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "prisma": "^6.15.0",
+    "react-email": "4.2.11",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7"
   }
