--- a/flowmind/package.json
+++ b/flowmind/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.62.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.2.1",
+    "resend": "^6.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@react-email/preview-server": "^4.2.11",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
