--- a/smartspend/package.json
+++ b/smartspend/package.json
@@ -50,6 +50,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "inngest-cli": "^1.11.13",
     "prisma": "^6.15.0",
     "react-email": "4.2.11",
     "tailwindcss": "^4",
