--- a/smartspend/package.json
+++ b/smartspend/package.json
@@ -43,6 +43,7 @@
     "react-spinners": "^0.17.0",
     "recharts": "^3.2.1",
     "resend": "^6.1.0",
+    "serialize-error-cjs": "^0.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
