--- a/smartspend/package.json
+++ b/smartspend/package.json
@@ -34,11 +34,11 @@
     "date-fns": "^4.1.0",
     "inngest": "^3.40.3",
     "lucide-react": "^0.542.0",
-    "next": "^16.0.7",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.9.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.62.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.2.1",
